--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,17 @@ oprofile_data/
 CMakeSettings.json
 /ci-artifacts/
 /out/
+
+# CMake files
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
